<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:fab="http://schemas.android.com/apk/res-auto"
                tools:context=".views.main.PicksFragment"
                android:background="@color/primary_material_light">

  <GridView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/champion_grid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnWidth="60dp"
            android:numColumns="auto_fit"
            android:verticalSpacing="8dp"
            android:horizontalSpacing="8dp"
            android:stretchMode="columnWidth"
            android:gravity="center"

    />

  <com.software.shell.fab.ActionButton
    android:id="@+id/new_champ_list_bt"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_alignParentEnd="true"
    android:layout_marginEnd="@dimen/fab_margin"
    android:layout_marginBottom="@dimen/fab_margin"
    fab:type="DEFAULT"
    fab:button_color="@color/fab_material_lime_500"
    fab:button_colorPressed="@color/fab_material_lime_900"
    fab:image="@drawable/fab_plus_icon"
    fab:image_size="24dp"
    fab:shadow_color="#757575"
    fab:shadow_radius="1.0dp"
    fab:shadow_xOffset="0.5dp"
    fab:shadow_yOffset="1.0dp"
    fab:stroke_color="@color/fab_material_blue_grey_500"
    fab:stroke_width="1.0dp"
    fab:button_colorRipple="@color/fab_material_black"
    fab:rippleEffect_enabled="false"
    fab:shadowResponsiveEffect_enabled="true"
    fab:show_animation="@anim/fab_roll_from_down"
    fab:hide_animation="@anim/fab_roll_to_down"
    android:onClick="updateChampionSelection"
    />
</RelativeLayout>
