...
             android:gravity="center_vertical|center_horizontal"
             android:background="@color/primary_material_light" >

  <ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/imageMap"
    android:layout_gravity="center"
    android:src="@drawable/map"
    android:onClick="mapClickJungle"
    />
  <Button
    android:layout_width="wrap_content"
...
